<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/inner_screen_bg"
    tools:context=".activities.AddChildActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/content_action_layout" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/imvProfile"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="1dp"
                app:cardMaxElevation="2dp"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_gravity="center"
                        android:src="@drawable/payment_done" />

                    <com.mysafetynet.customs.MySafetyText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="$8"
                        android:textColor="@color/colorHint"
                        android:textSize="20sp"
                        app:fontName="@string/fontRalewayBold" />

                    <com.mysafetynet.customs.MySafetyText
                        android:id="@+id/txtMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="Payment done successfully"
                        android:textColor="@color/colorHint"
                        android:textSize="16sp"
                        app:fontName="@string/fontRalewayBold" />

                    <com.mysafetynet.customs.MySafetyText
                        android:id="@+id/txtTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="Payment done successfully"
                        android:textColor="@color/colorHint"
                        android:textSize="16sp"
                        app:fontName="@string/fontRalewayLight" />
                    <com.mysafetynet.customs.MySafetyText
                        android:id="@+id/txtOrderId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:layout_marginBottom="60dp"
                        android:text="Payment done successfully"
                        android:textColor="@color/colorHint"
                        android:textSize="16sp"
                        app:fontName="@string/fontRalewayLight" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <com.mysafetynet.customs.MySafetyButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/cardview"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="-20dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/button"
                android:elevation="5dp"
                android:text="@string/btnDone"
                android:textColor="@android:color/white"
                app:fontButtonName="@string/fontRalewayBold" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>